          previous character)
        - some utf8 support for freetype2
        - some vertical layout support for freetype2
        - named parameters for specifying colors, with quite a few options.
	- glyph size issues for freetyp2
        - minor problem in handling of canon option
        - low-level bmp writing (moving it to laptop)
        - Windows BMP reading and writing
        - added OO interfaces for the mosaic, bumpmap, postlevels and
          watermark filters
        - added t/t61filters.t to test the filters
	- fixed some problems in jpeg handling from the exp_represent merge
        - fixed buffer flushing for wiol jpeg code
	- added some tests that will hopefully catch it in the future
        - added the OO interfaces to the mosaic, bumpmap, postlevels and
          watermark filters, and documented them
        - fixed a sample size conversion problem in i_gpixf_d() etc.
        - added simple color representation conversion functions (used
          in i_fountain().)
        - added the fountain filter:
          - creates gradients similar to paint software
          - 90% support for GIMP gradient files
          - OO interface and documentation
          - Imager::Fountain for building/loading fill definitions
          - named value translation for filters
        - added a generic fill mechanism
          - created versions of i_box() and i_arc() that can fill using
            generic fills
          - solid generic fills (with alpha blending if asked for)
          - hatched generic fills (with some options)
          - fountain generic fills
          - sample code to generate an examples page
        - improved the scale* hatches a bit

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
