@@ -290,6 +290,10 @@ builtin_hatches[][8] =
     /* L-shaped tiles */
     0xFF, 0x84, 0x84, 0x9C, 0x94, 0x9C, 0x90, 0x90,
   },
+  {
+    /* wider stipple */
+    0x80, 0x40, 0x20, 0x00, 0x02, 0x04, 0x08, 0x00,
+  },
 };
 
 typedef struct
